--- a/public/tuiter/navigation.html
+++ b/public/tuiter/navigation.html
@@ -7,20 +7,14 @@
 <body>
 
 <ul>
-    <li>
-        <a href="home.html">Home</a>
-    </li>
-    <li>Explore</li>
+    <li><a href="home.html">Home</a></li>
+    <li><a href="explore.html">Explore</a></li>
     <li>Notifications</li>
     <li>Messages</li>
-    <li>Bookmarks</li>
+    <li><a href="bookmarks.html">Bookmarks</a></li>
     <li>Lists</li>
-    <li>
-        <a href="profile.html">Profile</a>
-    </li>
-    <li>
-        <a href="tuit.html">Tuit</a>
-    </li>
+    <li><a href="profile.html">Profile</a></li>
+    <li><a href="tuit.html">Tuit</a></li>
     <li>Reply</li>
 </ul>
 
