explore and bookmarks

--- a/public/tuiter/explore.html
+++ b/public/tuiter/explore.html
@@ -11,7 +11,7 @@
 
 <body>
 
-<div class="wd-page">
+<div class="wd-explore-page">
     <div>
         <input class="wd-search-bar-input"
                placeholder="Search Twitter">
@@ -52,7 +52,10 @@
 
         <div class="wd-explore-post">
             <div class="wd-post-text">
-                <div class="wd-trending-author">New York Times</div>
+                <div class="wd-trending-info">
+                    <div class="wd-trending-author">New York Times</div>
+                    <div class="wd-trending-date"> · Yesterday</div>
+                </div>
                 <div class="wd-trending-title">CNN's Cuomo conundrum: A star anchor with a brother in trouble</div>
             </div>
             <img class="wd-post-image"
@@ -61,7 +64,10 @@
 
         <div class="wd-explore-post">
             <div class="wd-post-text">
-                <div class="wd-trending-author">Bloomberg Opinion</div>
+                <div class="wd-trending-info">
+                    <div class="wd-trending-author">Bloomberg Opinion</div>
+                    <div class="wd-trending-date"> · Yesterday</div>
+                </div>
                 <div class="wd-trending-title">Thinking about getting a booster? Read this first.</div>
             </div>
             <img class="wd-post-image"
