--- a/public/tuiter/explore.html
+++ b/public/tuiter/explore.html
@@ -12,7 +12,7 @@
 <body>
 
 <div class="wd-explore-page">
-    <div>
+    <div class="wd-search">
         <input class="wd-search-bar-input"
                placeholder="Search Twitter">
         <a href="explore-settings.html">
@@ -92,7 +92,6 @@
                  src="https://www.syfy.com/sites/syfy/files/styles/amp_featured_image/public/gudetama-hero.jpg?h=d1cb525d">
         </div>
     </div>
-
 </div>
 
 </body>
