change fontawesome source

--- a/public/tuiter/explore.html
+++ b/public/tuiter/explore.html
@@ -5,8 +5,8 @@
     <title>Title</title>
     <link href="css/explore.css"
           rel="stylesheet"/>
-    <script src="https://kit.fontawesome.com/b25baf1ab4.js"
-            crossorigin="anonymous"></script>
+    <link href="../vendors/fontawesome/css/all.css"
+          rel="stylesheet">
 </head>
 
 <body>
