--- a/public/tuiter/explore.html
+++ b/public/tuiter/explore.html
@@ -9,6 +9,8 @@
           rel="stylesheet">
     <link href="../vendors/bootstrap/css/bootstrap.min.css"
           rel="stylesheet"/>
+    <link href="../vendors/bootstrap/bootstrap.min.css"
+          rel="stylesheet"/>
 </head>
 
 <body>
@@ -78,8 +80,7 @@
                        aria-describedby="from">
                 <span class="input-group-text bg-transparent border-0">
                     <a href="explore-settings.html">
-                        <i class="fa-solid fa-cog fa-2x"
-                           style="color: #007bff"></i></a></span>
+                        <i class="fa-solid fa-cog fa-2x"></i></a></span>
             </div>
 
             <ul class="nav nav-tabs mt-2">
@@ -189,7 +190,7 @@
                 <li class="list-group-item align-items-center flex-row d-inline-flex justify-content-between">
                     <div class="d-inline-flex">
                         <img class="rounded-circle me-2"
-                             src="images/relativity-space.jpg"
+                             src="images/relativity.jpg"
                              width="48px"
                              height="48px">
                         <div>
@@ -203,7 +204,7 @@
                 <li class="list-group-item align-items-center flex-row d-flex justify-content-between">
                     <div class="d-inline-flex">
                         <img class="rounded-circle me-2"
-                             src="images/virgin-galactic.jpg"
+                             src="images/virgin.jpg"
                              width="48px"
                              height="48px">
                         <div>
