--- a/public/tuiter/ExploreScreen/explore.html
+++ b/public/tuiter/ExploreScreen/explore.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="../css/explore.css"
+          rel="stylesheet"/>
     <link href="../../vendors/bootstrap/css/bootstrap.min.css"
           rel="stylesheet"/>
     <link href="../../vendors/bootstrap/bootstrap.min.css"
