--- a/public/tuiter/navigation.html
+++ b/public/tuiter/navigation.html
@@ -8,7 +8,7 @@
 
 <ul>
     <li><a href="home.html">Home</a></li>
-    <li><a href="ExploreScreen/explore.html">Explore</a></li>
+    <li><a href="ExploreScreen/old-explore.html">Explore</a></li>
     <li>Notifications</li>
     <li>Messages</li>
     <li><a href="bookmarks.html">Bookmarks</a></li>
